--- a/index.html
+++ b/index.html
@@ -7,108 +7,144 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Hello, world!</title>
   </head>
   <body>
-<!---------------------------------NAVBAR---------------------------------------->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+
+
+
+
+    <!----------------------------------------------------- NAVBAR --------------------------------------------->
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="container-fluid">
+    <!-- logo komt hier in een link tag incl foto link -->
+    <a class="navbar-brand" href="#">navbar</a>
+    <!-- togger knop wordt gelinked met content in de nav -->
+    <button class="navbar-toggler" 
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expand="false"
+      aria-label="toggle-navigation" >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-------------------- navbar content------------------ -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <!----dropdown nav-item------->
+        <li class="nav-item" >
+          <a class="nav-link dropdown-toggle" 
+          id="navbarDropdown" 
+          role="button" 
+          data-bs-toggle="dropdown" 
+          aria-expand="false" 
+          href="#">Dropdown</a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
+            <li><a class="dropdown-item" href="#">item</a></li>
+            <li><a class="dropdown-item" href="#">item</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#"></a>item</li>
+          </ul>
+        </li>
+      </ul>
+      <!--------------- input form ----------------->
+      <form class="d-flex" >
+        <input type="search" class="form-control me-2" placeholder="search" aria-label="search">
+        <button class="btn btn-outline-success " type="submit" >search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+<!------------------------------------------  carousel  --------------------------------------->
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://picsum.photos/950/350" class=" d-block w-100" alt="pic">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
-  </nav>
-<!----------------------------CAROUSEL------------------------------------------------------->
-<!-- Carousel wrapper -->
-<div id="carouselDarkVariant" class="carousel slide carousel-fade carousel-dark" data-mdb-ride="carousel">
-    <!-- Indicators -->
-    <div class="carousel-indicators">
-      <button
-        data-mdb-target="#carouselDarkVariant"
-        data-mdb-slide-to="0"
-        class="active"
-        aria-current="true"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        data-mdb-target="#carouselDarkVariant"
-        data-mdb-slide-to="1"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        data-mdb-target="#carouselDarkVariant"
-        data-mdb-slide-to="2"
-        aria-label="Slide 1"
-      ></button>
-    </div>
-  
-    <!-- Inner -->
-    <div class="carousel-inner">
-      <!-- Single item -->
-      <div class="carousel-item active">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(19).webp" class="d-block w-100" alt="Motorbike Smoke"/>
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
-      </div>
-  
-      <!-- Single item -->
-      <div class="carousel-item">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(35).webp" class="d-block w-100" alt="Mountaintop"/>
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </div>
-  
-      <!-- Single item -->
-      <div class="carousel-item">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(40).webp" class="d-block w-100" alt="Woman Reading a Book"/>
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        </div>
+    <div class="carousel-item">
+      <img src="https://picsum.photos/950/350"
+       class="d-block w-100" alt="pic">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
-    <!-- Inner -->
-  
-    <!-- Controls -->
-    <div class="container max-height d-flex align-items-center">
-        <div
-            id="carouselExampleCaptions"
-            class="carousel slide"
-            data-bs-
+    <div class="carousel-item">
+      <img src="https://picsum.photos/950/350" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
     </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<!-------------grid---------------------->
+<div class="mt-5 row container-fluid">
+
+    <div class="col-md-4 mx-auto">
+      <div class="card border-light p-5 w-100">
+          <img src="https://picsum.photos/150" class="rounded-circle mx-auto" alt="pic">
+          <h4 class="mx-auto">heading</h4>
+          <p class="mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, excepturi.</p>
+          <button type="button" class="btn btn-success w-50 mx-auto">view details >></button>
+      </div>
+    </div>
+
+    <div class="col-md-4 mx-auto">
+      <div class="card border-light p-5 w-100">
+        <img src="https://picsum.photos/150" class="rounded-circle mx-auto" alt="pic">
+        <h4 class="mx-auto">heading</h4>
+        <p class="mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, excepturi.</p>
+        <button type="button" class="btn btn-success w-50 mx-auto">view details >></button>
+    </div>
+    </div>
+
+    <div class="col-md-4 mx-auto">
+      <div class="card border-light p-5 w-100">
+        <img src="https://picsum.photos/150" class="rounded-circle mx-auto" alt="pic">
+        <h4 class="mx-auto">heading</h4>
+        <p class="mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, excepturi.</p>
+        <button type="button" class="btn btn-success w-50 mx-auto">view details >></button>
+    </div>
+    </div>
+
+</div>
+
+
+<!----------zigzag--------->
+
+<div class="container">
+  
+</div>
+
+
+
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
